metadata/objects/AgentWork__c.object
<CustomObject>
    <fields>
        <fullName>AcceptDateTime__c</fullName>
        <label>AcceptDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ActiveTime__c</fullName>
        <label>ActiveTime</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgentCapacityWhenDeclined__c</fullName>
        <label>AgentCapacityWhenDeclined</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssignedDateTime__c</fullName>
        <label>AssignedDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CancelDateTime__c</fullName>
        <label>CancelDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CapacityPercentage__c</fullName>
        <label>CapacityPercentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CapacityWeight__c</fullName>
        <label>CapacityWeight</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloseDateTime__c</fullName>
        <label>CloseDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeclineDateTime__c</fullName>
        <label>DeclineDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeclineReason__c</fullName>
        <label>DeclineReason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HandleTime__c</fullName>
        <label>HandleTime</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OriginalQueueId__c</fullName>
        <label>OriginalQueue ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PushTimeoutDateTime__c</fullName>
        <label>PushTimeoutDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PushTimeout__c</fullName>
        <label>PushTimeout</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestDateTime__c</fullName>
        <label>RequestDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ServiceChannelId__c</fullName>
        <label>ServiceChannel ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpeedToAnswer__c</fullName>
        <label>SpeedToAnswer</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AgentWorkRelated</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkItemId__c</fullName>
        <label>WorkItem ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>AgentWork__c</label>
    <listViews>
        <fullName>Tier3Queue_AgentWork</fullName>
        <filterScope>Queue</filterScope>
        <label>Tier3Queue</label>
        <queue>Tier3Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>AgentWork Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AgentWork__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>